<?xml version="1.0"?>
<package format="2">
  <name>stella_tf_monitor</name>
  <version>0.0.0</version>
  <description>The stella_tf_monitor package</description>
  <maintainer email="world.applepie@gmail.com">ymd-stella</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>tf2_ros</depend>
  <depend>diagnostic_updater</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
